--- a/notes.ltx
+++ b/notes.ltx
@@ -169,7 +169,7 @@ and let that account for how to decompose a term of type $G[zH]$ as if it were a
 And before defining $\tau$ let's define a fiddly technical helper function
 about which I don't have great intuition yet
 $$\phi : H \to [zH] \to [zH](G + 2zH + 2z^2 H_z) + 1$$
-The first argument to $\phi$ is sort of a stack.
+The second argument to $\phi$ is sort of a stack.
 Here's how to compute $\phi\ h\ s$. Tutte decomposition on $h$ gives
 us $(G + 1) + zH^2 +  zH + 2z^2 H_z$. Let's split cases over that data:
 \begin{itemize}
