--- a/4ct-thoughts/combinatory-completeness.ltx
+++ b/4ct-thoughts/combinatory-completeness.ltx
@@ -13,13 +13,10 @@
 \def\wat{\mathrel{@}}
 \def\pprov { \prov\!\!\!\prov }
 
+% The earliest version of this material seems to date to an email to noam
+% 2017.2.28 containing the text ``theorem 0.3 seems to work??''
+
 \begin{document}
-
-
-
-
-
-
 
 
 \subsection{Combinatorial rules}
