--- a/4ct-thoughts/combinatory-completeness.ltx
+++ b/4ct-thoughts/combinatory-completeness.ltx
@@ -16,6 +16,11 @@
 % The earliest version of this material seems to date to an email to noam
 % 2017.2.28 containing the text ``theorem 0.3 seems to work??''
 
+% The chiral type system in ../nb/chiral-type-system.png was mentioned
+% in an email 2017.3.1 with text ``But I can at least write down a
+% natural deduction system that captures which direction the colors go
+% around each vertex.''
+
 \begin{document}
 
 
